kube/webapp/webapp_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: note-app
  name: note-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: note-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: note-app
    spec:
      containers:
      - image: note-app:wolfi-3
        name: note-app
        ports:
        - containerPort: 8000
        resources: {}
status: {}
